--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -37,7 +37,14 @@
             </div>
             <div>
               <a href="" class="white-paper-link">WHITE PAPER</a>
-              <a href="" class="pl-2 github-link"><span>GITHUB</span></a>
+              <a href="" class="github-link ml-3">
+                <svg width="15" height="15">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-github-icon"></use>
+                  </switch>
+                </svg>
+                <span>GITHUB</span>
+              </a>
             </div>
           </div>
         </div>
@@ -56,7 +63,14 @@
             </div>
             <div>
               <a href="" class="white-paper-link">WHITE PAPER</a>
-              <a href="" class="pl-2 github-link"><span>GITHUB</span></a>
+              <a href="" class="github-link ml-3">
+                <svg width="15" height="15">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-github-icon"></use>
+                  </switch>
+                </svg>
+                <span>GITHUB</span>
+              </a>
             </div>
           </div>
         </div>
