--- a/app/assets/stylesheets/web/ost/index/BlockchainInfra.scss
+++ b/app/assets/stylesheets/web/ost/index/BlockchainInfra.scss
@@ -42,21 +42,18 @@
   }
   .white-paper-link {
     color: $yellow-400;
-    border-bottom: 1.1px solid $yellow-400;
+    border-bottom: 1.5px solid $yellow-400;
     letter-spacing: 2.7px;
     font-weight: $font-weight-bold;
-    padding-bottom: 6px;
+    padding-bottom: 2px;
     font-size: $font-size-sm;
   }
   .github-link {
-    color: $white;
+    color: #d3e3e5;
     letter-spacing: 2.7px;
+    padding-bottom: 2px;
     font-weight: $font-weight-bold;
-    font-size: $font-size-sm;
-    span{
-      padding-bottom: 6px;
-      border-bottom: 1.1px solid $white;
-    }
+    border-bottom: 1.5px solid #d3e3e5;
   }
 }
 
