team section ui

--- a/app/assets/stylesheets/web/ost/index/OstTeam.scss
+++ b/app/assets/stylesheets/web/ost/index/OstTeam.scss
@@ -1,6 +1,5 @@
 .container-ost-team{
-
-  background-color: #eff9fa;
+  background-image: linear-gradient(to bottom, #ffffff, #f4f8f9);
   h1{
     color: #438cad;
   }
@@ -13,6 +12,7 @@
   .grid {
     background: #DDD;
     max-width: 400px;
+    margin: 0 auto;
   }
 
   /* clear fix */
