--- a/app/views/web/ost/index/_subscribe.erb
+++ b/app/views/web/ost/index/_subscribe.erb
@@ -1,7 +1,7 @@
-<section class="container-fluid container-subscribe" id="subscribe">
+<section class="container-fluid container-subscribe pt-5" id="subscribe">
   <div class="row text-center">
     <div class="container col-12 col-sm-9 col-lg-8 col-xl-6 mx-auto">
-      <div class="row py-5">
+      <div class="row">
         <div class="col-12">
           <div class="container-subscribe">
             <h2 class="font-weight-normal">Signup For Updates</h2>
