--- a/app/views/web/ost/index/_liquidity_token_exchange_mobile.erb
+++ b/app/views/web/ost/index/_liquidity_token_exchange_mobile.erb
@@ -1,23 +1,32 @@
 <section class="container-fluid liquidity-container-wrapper  d-md-none">
   <div class="row back-angled-edge">
     <div class="container">
-      <div class="row py-5 ">
-        <div class="col-12 ">
+      <div class="row text-content py-5 ">
+        <div class="col-12">
           <h3 class="white-header">Liquidity Branded Token Exchange  </h3>
-          <p class="mt-4">
+          <p class="mt-4 pr-3">
             OST Branded Token Exchange “BTEX” will facilitate easy exchange of BT for other currencies. For providing fast liquidity OST will will serve as the market maker intially with other market makers joining in time.
           </p>
         </div>
-        <div class="row container ">
-          <div class="col-6">
+        <div class="row img-container container ">
+          <div class="col-5 pr-0">
             <button class="btn btn-primary mt-3" title="read more"> read more </button>
           </div>
+          <div class="col-7 img-position ">
+            <img class="img-fluid responsively-lazy"
+                 src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-liquidity-branded-token-exchange-mobile@2x.png"
+                 alt="OST - Liquidity Branded Token"
+                 data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-liquidity-branded-token-exchange-mobile@2x.png"
+                 srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
+              />
+          </div>
 
-          <div class="col-6">image goes here</div>
         </div>
       </div>
     </div>
 
+
   </div>
+
 
 </section>
