--- a/app/assets/stylesheets/web/ost/index/EventsCarousel.scss
+++ b/app/assets/stylesheets/web/ost/index/EventsCarousel.scss
@@ -115,5 +115,6 @@ $background-color : #f2f8f8 ;
 @media (max-width: 767px) {
   .container-upcoming-events{
     background: $background-color;
+    padding-top: 74px;
   }
 }
