--- a/app/assets/stylesheets/web/ost/index/LiquidityTokenExchange.scss
+++ b/app/assets/stylesheets/web/ost/index/LiquidityTokenExchange.scss
@@ -1,11 +1,24 @@
 .liquidity-container-wrapper {
   background-color: #34445b;
   position: relative;
-  .row {
+  .text-content {
     color: white;
     .white-header {
       color: #ffffff;
 
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .liquidity-container-wrapper {
+    padding-right: 0;
+    .img-container{
+      padding-right: 0;
+      .img-position{
+        padding-right: 0;
+        margin-top: -20px;
+      }
     }
   }
 }
