--- a/app/views/web/ost/index/_jumbotron_mobile.erb
+++ b/app/views/web/ost/index/_jumbotron_mobile.erb
@@ -1,4 +1,4 @@
-<section class="container-jumbotron py-5 d-md-none">
+<section class="container-jumbotron pt-5 d-md-none">
 
   <div class="container">
     <div class="row align-items-center">
@@ -9,32 +9,40 @@
         </p>
 
       </div>
-      <div class="row">
-        <div class="col-4 ">
-          <div class="col-12 ">
-            <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary my-2  smooth-scroll" title="Discover OST KIT⍺">How it works</a>
-          </div>
-          <div class="col-12 ">
-            <a href="/partners" class="btn btn-secondary my-2  smooth-scroll" title="Meet Our Partners">Develop with us</a>
-          </div>
-
-        </div>
-        <div class="col-8 text-center mt-3 mt-md-0">
-          <div class="illustration w-100">
-            <div class="btn-secondary btn btn-play" title="Watch Intro" data-toggle="modal" data-target="#helpVideoModal" data-src="https://www.youtube.com/embed/yJswJcnLYpU">
-              <div class="play align-middle">
-                <svg class="svg">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-play"></use>
-                  </switch>
-                </svg>
+      <div class="col-12">
+        <div class="row">
+          <div class="col-7 ">
+            <div class="row">
+              <div class="col-12 ">
+                <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary my-2 equal-width smooth-scroll" title="Discover OST KIT⍺">How it works</a>
               </div>
-              <span class="align-middle"></span>
+              <div class="col-12 ">
+                <a href="/partners" class="btn btn-secondary my-2  smooth-scroll" title="Meet Our Partners">Develop with us</a>
+              </div>
             </div>
-            <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-hero-illustration-1x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-hero-illustration-2x.png 1000w" class="img-fluid position-relative" alt="Simple Token Play Video"/>
+
+
+          </div>
+          <div class="col-5 text-center mt-3 mt-md-0 pr-0">
+            <div class="illustration w-100">
+              <div class="btn-secondary btn btn-play" title="Watch Intro" data-toggle="modal" data-target="#helpVideoModal" data-src="https://www.youtube.com/embed/yJswJcnLYpU">
+                <div class="play align-middle ">
+                  <svg class="svg">
+                    <switch>
+                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-play"></use>
+                    </switch>
+                  </svg>
+                </div>
+                <span class="align-middle"></span>
+              </div>
+              <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-jumbotron-illustration-mobile@2x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-jumbotron-illustration-mobile@2x.png 1100w" class="img-fluid position-relative pr-0 w-100" alt="Simple Token Play Video"/>
+            </div>
           </div>
         </div>
       </div>
+
+      </div>
+
     </div>
   </div>
 </section>
