--- a/app/views/web/ost/index/_liquidity_token_exchange_mobile.erb
+++ b/app/views/web/ost/index/_liquidity_token_exchange_mobile.erb
@@ -8,18 +8,22 @@
             OST Branded Token Exchange “BTEX” will facilitate easy exchange of BT for other currencies. For providing fast liquidity OST will will serve as the market maker intially with other market makers joining in time.
           </p>
         </div>
-        <div class="row img-container container ">
-          <div class="col-5 pr-0">
-            <button class="btn btn-primary mt-3" title="read more"> read more </button>
+        <div class="col-12 img-container container ">
+          <div class="row">
+
+            <div class="col-5 pr-0">
+              <button class="btn btn-primary mt-3" title="read more"> read more </button>
+            </div>
+            <div class="col-7 pr-0 img-position ">
+              <img class="img-fluid responsively-lazy"
+                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-liquidity-branded-token-exchange-mobile@2x.png"
+                   alt="OST - Liquidity Branded Token"
+                   data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-liquidity-branded-token-exchange-mobile@2x.png"
+                   srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
+                />
+            </div>
           </div>
-          <div class="col-7 img-position ">
-            <img class="img-fluid responsively-lazy"
-                 src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-liquidity-branded-token-exchange-mobile@2x.png"
-                 alt="OST - Liquidity Branded Token"
-                 data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-liquidity-branded-token-exchange-mobile@2x.png"
-                 srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
-              />
-          </div>
+
 
         </div>
       </div>
