--- a/app/views/web/ost/index/_mobile_roadmap.erb
+++ b/app/views/web/ost/index/_mobile_roadmap.erb
@@ -1,4 +1,4 @@
-<div class="container roadmap-container d-md-none">
+<div class="container roadmap-container d-md-none mt-5">
 
   <div class="row">
     <div class="col-12 text-center mb-5">
