--- a/app/views/web/ost/events_news.html.erb
+++ b/app/views/web/ost/events_news.html.erb
@@ -1,2 +1,3 @@
 <%= render :partial => "/shared/web/common/navbarsubmenu" %>
 <%= render :partial => "/web/ost/events_news/jumbotron" %>
+<%= render :partial => "/web/ost/events_news/news" %>
