--- a/app/views/web/ost/events_news/_news.erb
+++ b/app/views/web/ost/events_news/_news.erb
@@ -1,3 +1,10 @@
+<%
+  image_height = 720;
+  image_width = 1280;
+  padding_bottom = (100 * image_height.to_f)/image_width.to_f;
+  news_index = news_index.present? ? news_index : 0;
+  needs_low_priority_lazy_loading = news_index > 4;
+%>
 <div class="row my-5">
   <div class="container">
     <h3 class="pl-4 pl-md-2">
@@ -7,30 +14,111 @@
         </switch>
       </svg>
     </h3>
-    <%
-      news = (@dynamic_content.data[GlobalConstant::StaticContentFileName.ost_news]['api_response'] || []) rescue []
-      puts "News items----------"
-      puts news
-      if news.present?
-    %>
-      <div class="row news-container mt-4 px-3 px-md-0">
-        <% news[0..8].each_with_index do|item, index| %>
-          <div class="col-12 col-md-4">
-            <div class="content-wrapper">
-              <%if news[index]['news_list_link_type'] == 'article-link' %>
-                <a href= "<%= raw(news[index]['news_list_link']) %>" target="_blank" title="<%=raw(news[index]['news_list_title']) %>">
-                  <%= render :partial => "web/ost/index/news_carousel_content", locals: {item: news[index], news_index: index} %>
-                </a>
-              <%else%>
-                <%= render :partial => "web/ost/index/news_carousel_content", locals: {item:news[index], news_index: index} %>
-              <%end%>
+    <div class="news-container mt-3">
+      <%
+        news = (@dynamic_content.data[GlobalConstant::StaticContentFileName.ost_news]['api_response'] || []) rescue []
+        if news.present?
+      %>
+        <div class="row px-3 px-md-0">
+          <% news[0..8].each_with_index do|item, index| %>
+            <div class="col-12 col-md-4 py-3">
+              <div class="content-wrapper">
+                <%if news[index]['news_list_link_type'] == 'article-link' %>
+                  <a href= "<%= raw(news[index]['news_list_link']) %>" target="_blank" title="<%=raw(news[index]['news_list_title']) %>">
+                    <%= render :partial => "web/ost/index/news_carousel_content", locals: {item: news[index], news_index: index} %>
+                  </a>
+                <%else%>
+                  <%= render :partial => "web/ost/index/news_carousel_content", locals: {item:news[index], news_index: index} %>
+                <%end%>
+              </div>
             </div>
-          </div>
-        <%end%>
+          <%end%>
+        </div>
+      <% end %>
+
+      <div class="row px-3 px-md-0 dynamic-news-section"></div>
+
+    </div>
+
+
+    <script id="news" type="text/x-handlebars-template">
+      <div class="col-12 col-md-4 py-3">
+        <div class="content-wrapper">
+          {{#ifArticle news_list_link}}
+          <a href="{{news_list_link}}" target="_blank" title="{{news_list_title}}">
+            <%= render :partial => "/web/ost/events_news/news_content" %>
+          </a>
+          {{else}}
+          <%= render :partial => "/web/ost/events_news/news_content" %>
+          {{/ifArticle}}
+        </div>
       </div>
-    <% end %>
-    <div class="text-center">
-      <button type="button" class="btn btn-primary my-4">Show more</button>
+    </script>
+
+    <div class="text-center show-more-wrapper">
+      <button type="button" class="btn btn-primary my-4 show-more-btn">Show more</button>
     </div>
   </div>
 </div>
+
+<% content_for :end_js do %>
+  <script type="text/javascript">
+    $(function () {
+
+      Handlebars.registerHelper('ifVideo', function(video, article_link ,  options ) {
+        if( video && !article_link){
+          return options.fn(this);
+        } else {
+          return options.inverse(this);
+        }
+      });
+
+      Handlebars.registerHelper('ifArticle', function(article_link, options ) {
+        if( article_link ){
+          return options.fn(this);
+        } else {
+          return options.inverse(this);
+        }
+      });
+
+      Handlebars.registerHelper('ifImage', function(image, options ) {
+        if(image){
+          return options.fn(this);
+        } else {
+          return options.inverse(this);
+        }
+      });
+
+
+      Handlebars.registerHelper('ifTitle', function(title, options ) {
+        if(title){
+          return options.fn(this);
+        } else {
+          return options.inverse(this);
+        }
+      });
+
+      Handlebars.registerHelper('ifDescription', function(description, options ) {
+        if(description){
+          return options.fn(this);
+        } else {
+          return options.inverse(this);
+        }
+      });
+
+      Handlebars.registerHelper('ifDate', function(date, options ) {
+        if(date){
+          return options.fn(this);
+        } else {
+          return options.fn(this) //options.inverse(this);
+        }
+      });
+
+      ost.news.init({
+        'newsList': <%= raw news.to_json %>
+      });
+
+    });
+  </script>
+
+<%end%>
