events jumbotron and subscribe section added

--- a/app/views/web/ost/events_news.html.erb
+++ b/app/views/web/ost/events_news.html.erb
@@ -1,3 +1,7 @@
 <%= render :partial => "/shared/web/common/navbarsubmenu" %>
 <%= render :partial => "/web/ost/events_news/jumbotron" %>
+<%= render :partial => "/web/ost/events_news/jumbotron_mobile"%>
+<%= render :partial => "/web/ost/events_news/subscribe_events"%>
 <%= render :partial => "/web/ost/events_news/news" %>
+
+
