--- a/app/views/web/ost/events_news/_news_content.erb
+++ b/app/views/web/ost/events_news/_news_content.erb
@@ -1,8 +1,8 @@
 <div class="w-100 content">
 
-  {{#ifVideo video_embed news_list_link}}
+  {{#ifVideo news_list_link_type}}
   <div class="video-wrapper">
-    <button type="button" class="font-weight-light btn video-btn h-100 w-100" data-toggle="modal" data-src="{{video_embed}}" data-target="#helpVideoModal">
+    <button type="button" class="font-weight-light btn video-btn h-100 w-100" data-toggle="modal" data-src="{{news_list_link}}" data-target="#helpVideoModal">
         <span class="play-icon">
           <svg class="icon-play align-middle">
             <switch>
@@ -18,7 +18,7 @@
     {{/ifImage}}
   </div>
   {{/ifVideo}}
-  {{#ifArticle news_list_link}}
+  {{#ifArticle news_list_link_type}}
   <div class="article-wrapper">
     {{#ifImage news_list_image}}
     <div class="img-wrapper">
@@ -37,7 +37,7 @@
   {{#ifDate news_list_date}}
   <div class="w-100 date-wrapper">
     <div class='date-content'>
-      <div class="date-text">{{news_list_date}}</div>
+      <div class="date-text">{{prettifyDate news_list_date}}</div>
     </div>
   </div>
   {{/ifDate}}
