UI fixes for ipad

--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -1,4 +1,4 @@
-<section class="container-fluid block-container py-5" id="blockchain-infra">
+<section class="container-fluid block-container pt-5" id="blockchain-infra">
   <div class="row">
     <div class="container">
       <div class="row align-items-center">
@@ -9,7 +9,7 @@
           </p>
           <div class="my-4">
             <a href="" class="btn btn-primary my-2 my-md-3" title="GITHUB FOUNDATION">GITHUB FOUNDATION</a>
-            <a href="" class="btn btn-secondary openst-forum my-2 my-md-3 ml-xl-3 " title="OPEN ST FORUM">OPEN ST FORUM</a>
+            <a href="" class="btn btn-secondary openst-forum my-2 my-md-3 ml-3 " title="OPEN ST FORUM">OPEN ST FORUM</a>
           </div>
         </div>
         <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3 mx-auto d-none d-md-block">
@@ -21,8 +21,8 @@
             />
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-12 col-md-6 info-card d-flex">
+      <div class="row">
+        <div class="col-12 col-md-6 info-card d-flex my-3 my-md-5">
           <div class="info-card-body p-3 d-flex flex-column">
             <div style="flex: 1 1 auto;">
               <div class="d-flex align-items-center">
@@ -48,7 +48,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-6 info-card d-flex mt-5 mt-md-0">
+        <div class="col-12 col-md-6 info-card d-flex my-3 my-md-5">
           <div class="info-card-body p-3 d-flex flex-column">
             <div style="flex: 1 1 auto;">
               <div class="d-flex align-items-center">
