--- a/app/views/web/ost/index/_ost_team.erb
+++ b/app/views/web/ost/index/_ost_team.erb
@@ -9,7 +9,7 @@
               <p class="text-left">Blockchain technologies hold enormous potential to transform business and improve society.</p>
               <p class="text-left">OST is a community driven project. Your feedback is the engine that will drive the project forward. We invite you to connect with us, become a link in our chain, and help us unlock the power of blockchain for all.</p>
               <a href="<%= GlobalConstant::Base.root_url %>team" class="btn btn-primary my-2" title="Meet The team">Meet The team</a>
-              <a href="<%= GlobalConstant::Base.root_url %>careers" class="btn btn-secondary my-2 ml-xl-4" title="Work with Us">Work with Us</a>
+              <a href="<%= GlobalConstant::Base.root_url %>careers" class="btn btn-secondary my-2 ml-lg-3" title="Work with Us">Work with Us</a>
             </div>
           </div>
         </div>
