--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="col col-lg-10 col-xl-9 mx-md-auto">
       <div class="row align-items-center">
-        <div class="col-md-12 col-lg-6">
+        <div class="col-md-12 col-lg-6 text-center text-lg-left">
           <h2 class="header-blue-900">OST Partners</h2>
           <p>Billions of App Actions<br/>Connecting Hundreds Of Millions Of Users</p>
-          <div class="row partners-companies">
+          <div class="row partners-companies mt-3">
             <div class="col-6 col-md-4 col-xl-3 my-3">
               <span class="partners-gushcloud-icon"></span>
             </div>
@@ -32,9 +32,9 @@
             </div>
           </div>
           <a href="/partners" class="btn btn-primary my-2 my-md-3" title="Meet OST Partners">MEET OST PARTNERS</a>
-          <a href="" class="btn btn-secondary my-2 ml-md-3" title="Discover POCS">DISCOVER POCS</a>
+          <a href="" class="btn btn-secondary my-2 ml-sm-3 ml-lg-0 ml-xl-3" title="Discover POCS">DISCOVER POCS</a>
         </div>
-        <div class="col-md-12 col-lg-4 mx-auto">
+        <div class="col-8 col-md-6 col-lg-4 mx-auto mt-5 mt-lg-0">
           <img class="img-fluid responsively-lazy"
                src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-partners-illustration.png"
                alt="OST - Partners"
