--- a/app/views/web/ost/index/_buy_ost.erb
+++ b/app/views/web/ost/index/_buy_ost.erb
@@ -1,11 +1,11 @@
 <section class="container-fluid container-token-buy py-md-5" id="token">
 
   <div class="row">
-    <div class="container col-12 col-md-10 mx-auto">
+    <div class="container">
       <div class="row text-center">
         <div class="col-12">
           <h1 class="title mt-4">Where to <span>Buy $OST</span></h1>
-          <p class="my-4">$OST is a cryptocurrency that can be used for staking against minting Branded Tokens within the OpenST protocol and also as a payment method in OST solutions.</p>
+          <p class="my-4 col-lg-10 mx-auto">$OST is a cryptocurrency that can be used for staking against minting Branded Tokens within the OpenST protocol and also as a payment method in OST solutions.</p>
           <div class="row">
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
               <a class="d-block my-4" href="https://www.okex.com/" target="_blank" title="Buy OST on Okex" >
