--- a/app/assets/stylesheets/web/ost-events-news.css
+++ b/app/assets/stylesheets/web/ost-events-news.css
@@ -1,4 +1,5 @@
 /*
  *= require web/ost/events-news/SubscribeEvents
  *= require web/ost/events-news/News
+ *= require web/ost/events-news/Events
  */
