--- a/app/views/web/ost/events_news.html.erb
+++ b/app/views/web/ost/events_news.html.erb
@@ -2,5 +2,6 @@
 <%= render :partial => "/web/ost/events_news/jumbotron" %>
 <%= render :partial => "/web/ost/events_news/jumbotron_mobile"%>
 <%= render :partial => "/web/ost/events_news/subscribe_events"%>
+<%= render :partial => "/web/ost/events_news/events" %>
 <%= render :partial => "/web/ost/events_news/news" %>
 <%= render :partial => "/shared/web/modals/help_video" %>
