make news scss common for home page and event-news page

--- a/app/assets/stylesheets/web/default_ost.css
+++ b/app/assets/stylesheets/web/default_ost.css
@@ -11,4 +11,5 @@
  *= require web/common/_icons
  *= require web/common/_navbar
  *= require web/common/_ostsvgs
+  *= require web/common/_news
  */
