--- a/app/views/web/ost/index/_news_carousel.erb
+++ b/app/views/web/ost/index/_news_carousel.erb
@@ -1,4 +1,4 @@
-<section class="container-fluid container-carousel">
+<section class="container-fluid container-carousel news-container">
   <div class="row">
     <div class="container">
       <%
