--- a/app/views/web/ost/events_news/_events.erb
+++ b/app/views/web/ost/events_news/_events.erb
@@ -48,9 +48,16 @@
           </div>
           <%end%>
       </div>
-      <div class="col-md-5">
-        <div class="events-date-section mb-5 h-100">
-          <input type="text" class="events-date-picker"/>
+      <div class="col-md-5 pb-5">
+        <div class="events-date-section row">
+          <div class="col-12">
+            <div class="h-100 p-5">
+              <div class="events-date-picker"/>
+            </div>
+          </div>
+          <div class="col-12 my-3 text-center">
+            <button class="btn btn-secondary">SHOW ARCHIVED EVENTS</button>
+          </div>
         </div>
       </div>
     <%end%>
