--- a/app/assets/stylesheets/web/ost-events-news.css
+++ b/app/assets/stylesheets/web/ost-events-news.css
@@ -2,4 +2,5 @@
  *= require web/ost/events-news/SubscribeEvents
  *= require web/ost/events-news/News
  *= require web/ost/events-news/Events
+  *= require plugins/bootstrap_datepicker/bootstrap-datepicker
  */
