--- a/app/views/web/ost/events_news/_jumbotron.erb
+++ b/app/views/web/ost/events_news/_jumbotron.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row align-items-center">
 
-      <div class="col-md-12 col-lg-6">
+      <div class="col-md-6 col-lg-6">
         <h2 class="header-blue-900">A wonderful serenity has taken possession of my soul</h2>
         <p class="mt-3">
           A wonderful serenity has taken possession of my entire
@@ -14,8 +14,10 @@
         <a href="#news" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Meet Our Partners">Read News</a>
       </div>
 
-      <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
-
+      <div class="col-md-6 col-lg-6 text-center my-auto">
+        <img
+          class="img-fluid position-relative" alt="OST events Jumbotron"
+          src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-events-jumbotron.png" />
       </div>
 
     </div>
