--- a/app/views/web/ost/events_news/_jumbotron_mobile.erb
+++ b/app/views/web/ost/events_news/_jumbotron_mobile.erb
@@ -12,13 +12,15 @@
       </div>
 
     </div>
-    <div class="row">
-      <div class="col-6">
-        <a href="#events" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="See Events">See Events</a>
-        <a href="#news" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Meet Our Partners">Read News</a>
+    <div class="row ">
+      <div class="col-6 my-auto">
+        <a href="#events" class="btn btn-primary my-2 smooth-scroll" title="See Events">See Events</a>
+        <a href="#news" class="btn btn-secondary my-2 smooth-scroll" title="Meet Our Partners">Read News</a>
       </div>
-      <div class="col-6  text-center mt-3 mt-md-0">
-
+      <div class="col-6 my-auto text-center">
+        <img
+          class="img-fluid position-relative" alt="OST events Jumbotron"
+          src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-events-jumbotron.png" />
       </div>
     </div>
   </div>
