--- a/app/views/web/ost/events_news/_events.erb
+++ b/app/views/web/ost/events_news/_events.erb
@@ -1,35 +1,37 @@
-<div class="row my-5">
-  <div class="container ">
+<div class="events-container">
+  <div class="row my-5">
+    <div class="container ">
 
-    <h3 class="text-center">
-      <svg class="ost-news-logo">
-        <switch>
-          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-news-logo"></use>
-        </switch>
-      </svg>
-    </h3>
+      <h3 class="text-center">
+        <svg class="ost-news-logo">
+          <switch>
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-news-logo"></use>
+          </switch>
+        </svg>
+      </h3>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="events-container container">
-    <%
-      events = (@dynamic_content.data[GlobalConstant::StaticContentFileName.ost_events]['api_response'] || []) rescue []
 
-      if events.present?
-    %>
+    <div class="container">
+      <div class="row">
+      <%
+        events = (@dynamic_content.data[GlobalConstant::StaticContentFileName.ost_events]['api_response'] || []) rescue []
 
-      <div class="col-md-7">
-        <% events[0..6].each_with_index do |item,index|%>
-          <% date = Time.at(item['event_date'].to_i).utc %>
+        if events.present?
+      %>
+        <div class="col-md-7">
+          <% events[0..6].each_with_index do |item,index|%>
+            <% date = Time.at(item['event_date'].to_i).utc %>
 
-          <div class="event-content-wrapper mb-5">
-            <svg width="24" height="45" class="bookmark-icon">
-              <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bookmark"></use>
-              </switch>
-            </svg>
-            <a href="<%= item['event_link'] %>" target="_blank" class="d-block" title="<%= item['event_name'] %>">
-              <div class="media content-wrapper align-items-center">
+            <div class="outer-wrapper">
+              <svg width="24" height="45" class="bookmark-icon">
+                <switch>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bookmark"></use>
+                </switch>
+              </svg>
+              <div class="event-content-wrapper mb-5">
+              <a href="<%= item['event_link'] %>" target="_blank" class="d-block" title="<%= item['event_name'] %>">
+                <div class="media content-wrapper align-items-center">
                 <span class="dateEl">
                   <svg width="45" height="60" class="event-icons">
                     <switch>
@@ -37,32 +39,31 @@
                     </switch>
                   </svg>
                 </span>
-                <div class="media-body content-body">
-                  <div class="heading"><%= date.strftime("%d")%> <%= date.strftime("%b")%> <%=date.strftime("%Y")%></div>
-                  <p class="event-desc"><%=item['event_name']%>  <%= item['event_desc'] %></p>
-                  <p class="event-location mt-2"><%=item['event_desc']%></p>
-                </div>
+                  <div class="media-body content-body">
+                    <div class="heading"><%= date.strftime("%d")%> <%= date.strftime("%b")%> <%=date.strftime("%Y")%></div>
+                    <p class="event-desc"><%=item['event_name']%>  <%= item['event_desc'] %></p>
+                    <p class="event-location mt-2"><%=item['event_desc']%></p>
+                  </div>
 
-              </div>
-            </a>
-          </div>
+                </div>
+              </a>
+            </div>
+            </div>
           <%end%>
-      </div>
-      <div class="col-md-5 pb-5">
-        <div class="events-date-section row">
-          <div class="col-12">
-            <div class="h-100 p-5">
-              <div class="events-date-picker"/>
+        </div>
+        <div class="col-md-5 pb-5">
+          <div class="events-date-section row">
+            <div class="col-12">
+              <div class="h-100 p-5">
+                <div class="events-date-picker"/>
+              </div>
+            </div>
+            <div class="col-12 my-3 text-center">
+              <button class="btn btn-secondary">SHOW ARCHIVED EVENTS</button>
             </div>
           </div>
-          <div class="col-12 my-3 text-center">
-            <button class="btn btn-secondary">SHOW ARCHIVED EVENTS</button>
-          </div>
         </div>
-      </div>
-    <%end%>
-
-
+      <%end%>
+    </div>
   </div>
-
 </div>
