--- a/app/views/web/ost/events_news/_events_content.erb
+++ b/app/views/web/ost/events_news/_events_content.erb
@@ -10,7 +10,7 @@
         <a href="{{event_link}}" target="_blank" class="d-block" title="{{event_name}}">
           <div class="media content-wrapper align-items-center">
                 <span class="dateEl">
-                  <svg width="45" height="60" class="event-icons">
+                  <svg width="90%" height="60" class="event-icons">
                     <switch>
                       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#{{event_icon}}"></use>
                     </switch>
