minor classname  changes

--- a/app/views/web/ost/events_news/_events.erb
+++ b/app/views/web/ost/events_news/_events.erb
@@ -68,8 +68,8 @@
       <%end%>
     </div>
 
-      <div class="text-center show-more-wrapper col-md-3 offset-md-2">
-        <button type="button" class="btn btn-primary my-4 show-more-btn">Show more</button>
+      <div class="text-center show-more-event-wrapper col-md-3 offset-md-2">
+        <button type="button" class="btn btn-primary my-4 show-more-event-btn">Show more</button>
       </div>
   </div>
 </div>
