--- a/app/assets/stylesheets/web/ost/events-news/Events.scss
+++ b/app/assets/stylesheets/web/ost/events-news/Events.scss
@@ -85,6 +85,9 @@
             th.next{
               text-align: right;
             }
+            td{
+              padding:$table-cell-padding;
+            }
           }
         }
       }
