--- a/app/views/web/ost/events_news/_events.erb
+++ b/app/views/web/ost/events_news/_events.erb
@@ -15,13 +15,20 @@
     <div class="container">
       <div class="row">
       <%
-        events = (@dynamic_content.data[GlobalConstant::StaticContentFileName.ost_events]['api_response'] || []) rescue []
+        # events = (@dynamic_content.data[GlobalConstant::StaticContentFileName.ost_events]['api_response'] || []) rescue []
+        events = [{"event_name"=>"OST LIVE", "event_desc"=>"Guest: Ben Chan", "event_icon"=>"events-podcast-icon", "event_date"=>"1540944000", "event_link"=>"https://www.youtube.com/ostdotcom"}, {"event_name"=>"OST LIVE", "event_desc"=>"Guest: Trent McConaghy", "event_icon"=>"events-podcast-icon", "event_date"=>"1539734400", "event_link"=>"https://www.youtube.com/ostdotcom"}, {"event_name"=>"OST LIVE", "event_desc"=>"Project Update", "event_icon"=>"events-podcast-icon", "event_date"=>"1538697600", "event_link"=>"https://www.youtube.com/ostdotcom"}, {"event_name"=>"OST LIVE", "event_desc"=>"Guest: Keld van Schreven", "event_icon"=>"events-podcast-icon", "event_date"=>"1538524800", "event_link"=>"https://www.youtube.com/ostdotcom"}, {"event_name"=>"OST LIVE", "event_desc"=>"Guest: Sean Au", "event_icon"=>"events-podcast-icon", "event_date"=>"1538092800", "event_link"=>"https://www.youtube.com/ostdotcom"}, {"event_name"=>"OST at Web3 Summit", "event_desc"=>"Berlin", "event_icon"=>"events-event-icon", "event_date"=>"1540166400", "event_link"=>"https://web3summit.com/"}, {"event_name"=>"OST at Fellowship of Ethereum Magicians", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1540684800", "event_link"=>"https://www.picatic.com/ethmagicians-prague-2018"},{"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1543751498", "event_link"=>"https://devcon4.ethereum.org/"}, {"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1543751498", "event_link"=>"https://devcon4.ethereum.org/"}, {"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1543751498", "event_link"=>"https://devcon4.ethereum.org/"}, {"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1543751498", "event_link"=>"https://devcon4.ethereum.org/"}, {"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1543751498", "event_link"=>"https://devcon4.ethereum.org/"},{"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1543751498", "event_link"=>"https://devcon4.ethereum.org/"}, {"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1542973898", "event_link"=>"https://devcon4.ethereum.org/"}, {"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1542973898", "event_link"=>"https://devcon4.ethereum.org/"}, {"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1540857600", "event_link"=>"https://devcon4.ethereum.org/"}]
+        ost_event_filtered = []
         events.sort_by! { |k| k["event_date"] }
+        events.each_with_index do |item, index |
+          if item["event_date"].to_i  >= (Time.now - 24.hours).utc.to_i
+              ost_event_filtered.push(item)
+          end
+        end
         if events.present?
       %>
         <div class="col-md-7">
           <div class="static-events">
-            <% events[0..5].each_with_index do |item,index|%>
+            <% ost_event_filtered[0..5].each_with_index do |item,index|%>
               <% date = Time.at(item['event_date'].to_i).utc %>
 
               <div class="outer-wrapper">
@@ -52,7 +59,7 @@
               </div>
             <%end%>
           </div>
-          <div class="row  dynamic-events-section"></div>
+          <div class="row dynamic-events-section"></div>
         </div>
         <div class="col-md-5 pb-5 pl-md-5">
           <div class="row events-date-section">
