homepage minor changes

--- a/app/views/web/ost/index/_jumbotron.erb
+++ b/app/views/web/ost/index/_jumbotron.erb
@@ -7,8 +7,8 @@
         <p class="mt-3">
           OST is a public blockchain platform for businesses with millions of users. Launch your own Branded Tokens and turn your business into a dynamic ecosystem.
         </p>
-        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="Discover OST KIT⍺">How it works</a>
-        <a href="/partners" class="btn btn-secondary my-2 ml-3 smooth-scroll" title="Meet Our Partners">Develop with us</a>
+        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="How it works">How it works</a>
+        <a href="/partners" class="btn btn-secondary my-2 ml-3 smooth-scroll" title="Develop with us">Develop with us</a>
       </div>
 
       <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
